# statsd-proxy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  docker-compose.yml  example.cfg
.docker/: Dockerfile  entrypoint.sh
src/: config.h  ctx.c  proxy.c  statsd-proxy.c
